--- a/Croissant/photo.html
+++ b/Croissant/photo.html
@@ -3,16 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact-us</title>
+    <title>Croisant Picture</title>
 </head>
 <body>
-    <h1>🥐 Contact us</h1>
-    <p>
-        To contact croissant.com, please email us at
-        <a href="mailto:hello@croissant.com" title="contact us by email">hello@croissant.com</a>
-        for more info
-      </p>
-      <footer>
+    <h1>🥐 A picture of a croissant</h1>
+    <img src="/images/croissant.jpg" alt="Homemade croissant" class="croissant-photo">
+    <footer>
         <a href="/" title="Home"> Homepage</a>
         <a href="/photo" title="Croissant photo"> Photo</a>
         <a href="/contact" title="Contact Croissant.com"> Contact</a>
