--- a/Croissant/index.html
+++ b/Croissant/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact-us</title>
+    <title>Croissant</title>
 </head>
 <body>
-    <h1>🥐 Contact us</h1>
+    <h1>🥐 Croissant</h1>
     <p>
-        To contact croissant.com, please email us at
-        <a href="mailto:hello@croissant.com" title="contact us by email">hello@croissant.com</a>
-        for more info
+        A croissant is a buttery, flaky, viennoiserie pastry of Austrian origin,
+        named for its historical crescent shape. Croissants and other viennoiserie
+        are made of a layered yeast-leavened dough
       </p>
       <footer>
         <a href="/" title="Home"> Homepage</a>
         <a href="/photo" title="Croissant photo"> Photo</a>
         <a href="/contact" title="Contact Croissant.com"> Contact</a>
       </footer>
+
 </body>
 </html>
