--- a/Croissant/photo.html
+++ b/Croissant/photo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/styles.css">
     <title>Croisant Picture</title>
 </head>
 <body>
     <h1>🥐 A picture of a croissant</h1>
-    <img src="/images/croissant.jpg" alt="Homemade croissant" class="croissant-photo">
+    <img src="/image/croissant.jpg" alt="Homemade croissant" class="croissant-photo">
     <footer>
         <a href="/" title="Home"> Homepage</a>
         <a href="/photo" title="Croissant photo"> Photo</a>
